5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1876_1290.log
== TEST (2019-07-03 18:24:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[10,12,15],[6,8,12],[12,12,18]]
print(tempo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
print(tempo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:30:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
vetop=vet*(1/60)
quantidade=dot(inv(tempo),vetop.T)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:31:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
vetop=vet*(1/60)
quantidade=dot(tempo,vetop.T)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
print(quantidade*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
print(quantidade*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
print(quantidade*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
print(quantidade*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
print(max(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]=max(q)):
	print("cadeira")
elif (q[1]=max(q)):
	print("bau"):
elif (q[2]=max[q]):
	print("mesa")
-- ERROR:
File "XXXX", line 12
    if (q[0]=max(q)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
elif (q[1]==max(q)):
	print("bau"):
elif (q[2]==max[q]):
	print("mesa")
-- ERROR:
File "XXXX", line 15
    print("bau"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:39:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau"):
else:
	print("mesa")
-- ERROR:
File "XXXX", line 15
    print("bau"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:40:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- EXECUTION TIME:
1.19857
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
cadeira:  192.0
bau:  326.0
mesa:  963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
cadeira:  102.0
bau:  3265.0
mesa:  109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
cadeira:  9512.0
bau:  1122.0
mesa:  5478.0
cadeira
mesa
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:40:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- EXECUTION TIME:
1.03023
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
cadeira:  192.0
bau:  326.0
mesa:  963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
cadeira:  102.0
bau:  3265.0
mesa:  109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
cadeira:  9512.0
bau:  1122.0
mesa:  5478.0
cadeira
mesa
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:40:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:41:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- EXECUTION TIME:
1.0404
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
cadeira:  192.0
bau:  326.0
mesa:  963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
cadeira:  102.0
bau:  3265.0
mesa:  109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
cadeira:  9512.0
bau:  1122.0
mesa:  5478.0
cadeira
mesa
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
else:
	print("mesa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
if (q[2]==max(q)):
	print("mesa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:43:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[10,12,15],[6,8,12],[12,12,18]])
vet=array(eval(input()))
quantidade=dot(inv(tempo),vet.T)
q=quantidade*60

print("cadeira: ", round(q[0],0))
print("bau: ", round(q[1],0))
print("mesa: ", round(q[2],0))
if (q[0]==max(q)):
	print("cadeira")
if (q[1]==max(q)):
	print("bau")
if (q[2]==max(q)):
	print("mesa")
-- EXECUTION TIME:
1.0724
-- TEST CASE 1:
---- input:
[337.95,255.26666667,392.5]
---- correct output:
cadeira: 192.0
bau: 326.0
mesa: 963.0
mesa
---- user output:
cadeira:  192.0
bau:  326.0
mesa:  963.0
mesa
-- TEST CASE 2:
---- input:
[697.25,467.33333333,706.1]
---- correct output:
cadeira: 102.0
bau: 3265.0
mesa: 109.0
bau
---- user output:
cadeira:  102.0
bau:  3265.0
mesa:  109.0
bau
-- TEST CASE 3:
---- input:
[3179.23333333,2196.4,3770.2]
---- correct output:
cadeira: 9512.0
bau: 1122.0
mesa: 5478.0
cadeira
---- user output:
cadeira:  9512.0
bau:  1122.0
mesa:  5478.0
cadeira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
